# cproject

./: CMakeLists.txt  README.md  cproject  generate.sh
files/: .clang-format  .gitignore  CMakeLists.txt  build.sh
